--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: Andy Skiles
 markdown: redcarpet
 pygments: true
 auto: true
-exclude: node_modules, gulpfile.js, development
+exclude: node_modules, gulpfile.js, development, README.md
 permalink: none
