--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 name: Andy Skiles
 markdown: redcarpet
-pygments: true
-auto: true
-exclude: node_modules, gulpfile.js, development, README.md
+exclude: [node_modules, gulpfile.js, development, README.md]
 permalink: none
